--- a/index.html
+++ b/index.html
@@ -634,10 +634,10 @@
         </form>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop backdrop--is-hidden" data-modal>
       <div class="modal">
-        <button class="close-btn btn" type="button" data-modal-close>
-          <svg class="close-icon" width="18" height="18">
+        <button class="close-btn" type="button" data-modal-close>
+          <svg class="close-btn__icon" width="18" height="18">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -713,9 +713,10 @@
               ></use>
             </svg>
             Погоджуюся з розсилкою та приймаю
-            <a class="terms-link" href="./index.html">Умови договору</a>
+            <a class="checkbox__terms-link" href="./index.html"
+              >Умови договору</a
+            >
           </label>
-
           <button class="order-form__btn btn" type="submit">Відправити</button>
         </form>
       </div>
