--- a/portfolio.html
+++ b/portfolio.html
@@ -72,27 +72,27 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Наші проєкти</h1>
-          <ul class="filter-list list">
+          <ul class="filter list">
             <li>
-              <button class="filter-btn btn" type="button">Усі</button>
+              <button class="filter__btn" type="button">Усі</button>
             </li>
             <li>
-              <button class="filter-btn btn" type="button">Веб-сайти</button>
+              <button class="filter__btn" type="button">Веб-сайти</button>
             </li>
             <li>
-              <button class="filter-btn btn" type="button">Додатки</button>
+              <button class="filter__btn" type="button">Додатки</button>
             </li>
             <li>
-              <button class="filter-btn btn" type="button">Дизайн</button>
+              <button class="filter__btn" type="button">Дизайн</button>
             </li>
             <li>
-              <button class="filter-btn btn" type="button">Маркетинг</button>
+              <button class="filter__btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="portfolio-list card-set list">
-            <li class="portfolio-card card-set__item">
+          <ul class="portfolio card-set list">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/laptop.jpg"
                     alt="Ноутбук з веб-сайтом"
@@ -100,7 +100,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -108,15 +108,15 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">Технокряк</h2>
-                  <p class="project-text">Веб-сайт</p>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Технокряк</h2>
+                  <p class="card__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/poster.jpg"
                     alt="Постер з баскетболістами"
@@ -124,7 +124,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -132,17 +132,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
+                <div class="card__wrapper">
+                  <h2 class="card__title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
-                  <p class="project-text">Дизайн</p>
+                  <p class="card__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/seafood.jpg"
                     alt="Логотип рибного ресторану"
@@ -150,7 +150,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -158,17 +158,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
+                <div class="card__wrapper">
+                  <h2 class="card__title">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
-                  <p class="project-text">Додаток</p>
+                  <p class="card__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/headphones.jpg"
                     alt="Навушники"
@@ -176,7 +176,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -184,17 +184,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
+                <div class="card__wrapper">
+                  <h2 class="card__title">
                     Проєкт <span lang="en">Prime</span>
                   </h2>
-                  <p class="project-text">Маркетинг</p>
+                  <p class="card__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/boxes.jpg"
                     alt="Дві коробки"
@@ -202,7 +202,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -210,17 +210,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
+                <div class="card__wrapper">
+                  <h2 class="card__title">
                     Проєкт <span lang="en">Boxes</span>
                   </h2>
-                  <p class="project-text">Додаток</p>
+                  <p class="card__text">Додаток</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/monitor.jpg"
                     alt="Монітор з веб-сайтом"
@@ -228,7 +228,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -236,17 +236,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 lang="en" class="project-title">
+                <div class="card__wrapper">
+                  <h2 lang="en" class="card__title">
                     Inspiration has no Borders
                   </h2>
-                  <p class="project-text">Веб-сайт</p>
+                  <p class="card__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/magazine.jpg"
                     alt="Журнал"
@@ -254,7 +254,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -262,17 +262,17 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
+                <div class="card__wrapper">
+                  <h2 class="card__title">
                     Видання <span lang="en">Limited Edition</span>
                   </h2>
-                  <p class="project-text">Дизайн</p>
+                  <p class="card__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/lab-tag.jpg"
                     alt="Цінник з надписом TAG"
@@ -280,7 +280,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -288,17 +288,15 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 class="project-title">
-                    Проєкт <span lang="en">LAB</span>
-                  </h2>
-                  <p class="project-text">Маркетинг</p>
+                <div class="card__wrapper">
+                  <h2 class="card__title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="card__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-card card-set__item">
+            <li class="portfolio__card card-set__item">
               <a href="" class="link">
-                <div class="project-thumb">
+                <div class="card__thumb">
                   <img
                     src="./images/portfolio/laptop-hands.jpg"
                     alt="Ноутбук з руками людини"
@@ -306,7 +304,7 @@
                     height="294"
                   />
                   <div class="overlay">
-                    <p class="overlay-text">
+                    <p class="overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
                       отримати вичерпні відомості про компанію чи приватну
@@ -314,9 +312,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="project-wrapper">
-                  <h2 lang="en" class="project-title">Growing Business</h2>
-                  <p class="project-text">Додаток</p>
+                <div class="card__wrapper">
+                  <h2 lang="en" class="card__title">Growing Business</h2>
+                  <p class="card__text">Додаток</p>
                 </div>
               </a>
             </li>
@@ -325,89 +323,91 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-container container">
-        <div class="contacts">
-          <a href="./index.html" lang="en" class="logo logo-footer link"
-            ><span class="logo-accent">Web</span>Studio</a
+      <div class="footer__container container">
+        <div class="footer__contacts">
+          <a class="logo footer__logo link" href="./index.html" lang="en">
+            <span class="logo__accent">Web</span>Studio</a
           >
           <address>
-            <ul class="list">
-              <li class="contact-item">
+            <ul class="footer__contacts-list list">
+              <li class="footer__contacts-item">
                 <a
+                  class="footer__contacts-link link"
                   href="https://goo.gl/maps/BQu9GLipV9uaVXhj8"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="contact-link link"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="contact-item">
+              <li class="footer__contacts-item">
                 <a
+                  class="footer__contacts-link footer__contacts-link--alpha link"
                   href="mailto:info@devstudio.com"
-                  class="contact-link mail link"
                   lang="en"
                   >info@devstudio.com
                 </a>
               </li>
-              <li class="contact-item">
-                <a href="tel:+380961111111" class="contact-link phone link"
+              <li class="footer__contacts-item">
+                <a
+                  class="footer__contacts-link footer__contacts-link--alpha link"
+                  href="tel:+380961111111"
                   >+38 096 111 11 11
                 </a>
               </li>
             </ul>
           </address>
         </div>
-        <div class="social">
-          <strong class="footer-title">приєднуйтесь</strong>
+        <div class="footer__socials">
+          <strong class="footer__title">приєднуйтесь</strong>
           <ul class="socials list">
-            <li class="socials-item">
+            <li class="socials__item">
               <a
-                class="footer-socials-link link"
+                class="socials__link socials__link--dark link"
                 href="https://www.instagram.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 aria-label="Instagram"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="socials__item">
               <a
-                class="footer-socials-link link"
+                class="socials__link socials__link--dark link"
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 aria-label="Twitter"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="socials__item">
               <a
-                class="footer-socials-link link"
+                class="socials__link socials__link--dark link"
                 href="https://www.facebook.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 aria-label="Facebook"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="socials-item">
+            <li class="socials__item">
               <a
-                class="footer-socials-link link"
+                class="socials__link socials__link--dark link"
                 href="https://www.linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 aria-label="Linkedin"
               >
-                <svg class="footer-socials-icon" width="20" height="20">
+                <svg class="socials__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -415,19 +415,19 @@
           </ul>
         </div>
         <form class="subscription-form">
-          <label class="subscription">
-            <strong class="footer-title">Підпишіться на розсилку</strong>
+          <label class="subscription-form__label">
+            <strong class="footer__title">Підпишіться на розсилку</strong>
             <input
-              class="subscription-field"
+              class="subscription-form__input"
               type="email"
               placeholder="E-mail"
               name="user-email"
               required
             />
           </label>
-          <button class="subscribe-btn btn" type="submit">
+          <button class="subscription-form__btn btn" type="submit">
             Підписатися
-            <svg class="icon-send" width="24" height="24">
+            <svg class="btn__icon-send" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </button>
